# my_templates

./: .gitignore  README.md
cpp/default/: CMakeLists.txt
cpp/default/include/: main.hpp
cpp/default/src/: main.cpp
cpp/qt/: CMakeLists.txt  resources.qrc
cpp/qt/.cmake/api/v1/reply/: index-2024-03-04T13-29-25-0778.json
cpp/qt/ui/main/: MainWidget.cpp  MainWidget.hpp  MainWidget.ui  main.cpp
platformio/: compile_commands.json  extra_script_pos.py  platformio.ini
platformio/src/: main.cpp
python/: pyls_config.py
